[project]
name = "memory"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.135.1",
    "langchain>=1.2.13",
    "langgraph>=1.1.3",
    "langgraph-checkpoint-mongodb>=0.3.1",
    "langgraph-checkpoint-postgres>=3.0.5",
    "langgraph-checkpoint-redis>=0.4.0",
    "motor>=3.6.0",
    "pydantic-settings>=2.7.0",
    "pymongo>=4.15.5",
]
